--- a/arco.css
+++ b/arco.css
@@ -4,13 +4,22 @@
     box-sizing: border-box;
 }
 @font-face {
-    font-family: 'Neue Haas Grotesk Display Pro';
-    src: url('NHAASGROTESKTXPRO-55RG.ttf') format('truetype');
-}
+    font-family: 'Neue';
+    src: 
+    local('Neue');
+    src: url('NEUEHAASDISPLAYBLACK.TTF') format('truetype');
+    src: url('NHAASGROTESKTXPRO65MD.eot?#iefix') format('embedded-opentype'); 
+    src:url('NHAASGROTESKTXPRO65MD.eot'),
+         url('NHAASGROTESKTXPRO65MD.woff') format('woff'),
+         url('NHAASGROTESKTXPRO65MD.woff2') format('woff2'),
+         url('NHAASGROTESKTXPRO65MD.svg#NeueHaasGroteskDisplayPro') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-body{
-    background: #FFF;
+main{
     font-family: Arial, Helvetica, sans-serif;
+    background: #384538;
 }
 
 #home{
@@ -29,8 +38,8 @@ body{
 }
 
 .menu-logo img{
-    width: 100%;
-    height: 43px;
+    width: 166px;
+    height: 63px;
 }
 
 .navbar{
@@ -62,7 +71,7 @@ body{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 2.5%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -86,6 +95,7 @@ body{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
         padding: 1px 48px;
@@ -103,27 +113,30 @@ body{
 }
 
 .sobre{
+    position: relative;
+    color: white;
     display: flex;
-    align-items: center;
     width: 100%;
     max-width: 1190px;
     margin: auto;
     padding: 0 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    font-family: 'Neue Haas Grotesk Display Pro';
 }
 .title{
+    margin:50px 0 50px 0;
     display: flex;
-    text-align: left;
+    text-align: start;
     align-items: end;
     justify-content: start;
     width: 100%;
-    max-width: 1190px;
+    max-width: 810px;
     font-size: 130px;
     font-weight: 400;
     font-style: normal;
     line-height: 0.8;
 }
+.about{
+    margin:50px 0 50px 0;}
 .about h2{
     display: flex;
     text-align: left;
@@ -133,9 +146,9 @@ body{
     font-weight: 700;
     font-style: bold;
     padding: 8px 16px;
-    border: solid 1px black;
+    border: solid 1px white;
     border-radius: 20px;
-    width: 95px;
+    width: 105px;
 }
 .about h3{
     display: flex;
@@ -146,15 +159,21 @@ body{
     font-size: 14px;
     font-weight: 700;
     font-style: bold;
+    font-family: 'Neue Haas Grotesk Display Pro';
     margin-top: 18px;
 }
 .about p{
-    display: flex;
     justify-content: start;
     align-items: stretch;
     font-weight: 400;
     font-size: 14px;
     font-style: normal;
+    line-height: 1.6;
+}
+.about p span{
+    font-weight: 800;
+    font-size: 14px;
+    font-style: bold;
     line-height: 1.6;
     margin-top: 18px;
 }
@@ -166,178 +185,135 @@ body{
     font-style: normal;
     line-height: 1.6;
 }
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 820px) {
     .sobre{
         display: block;
-        width: 100%;
-        max-width: 1190px;
-        margin: auto;
-        padding: 0 20px;
-        margin-top: 10px;
-        margin-bottom: 20px;
+        margin-bottom: 100px;
     }
     .title{
-        display: flex;
-        text-align: left;
-        align-items: end;
-        justify-content: start;
-        width: 100%;
-        max-width: 1190px;
-        font-size: 130px;
-        font-weight: 400;
-        font-style: normal;
-        line-height: 0.8;
-        margin-bottom: 20px;
+        padding: 40px 20px 0px 0px;}
+    .title p{
+        font-size: 120px;
     }
 }
-.slider{
+@media screen and (max-width: 520px) {
+    .title p{
+        font-size: 70px;
+    }
+}
+.about-quote{
+    color: white;
     display: flex;
-    width: auto;
-    overflow-x: auto;
-    scroll-snap-type: x mandatory;
-    scroll-behavior: smooth;
-    scrollbar-width: 0;
-    box-shadow: 0 1.5rem 3 rem -0.75rem hsla(0, saturation, lightness, alpha);
-}
-.slider::-webkit-scrollbar{
-    display: none;
-}
-
-.slider.dragging .slider-img{
-    cursor: grab;
-    user-select: none;
-}
-
-.slider.no-transition{
-    scroll-behavior: auto;
-}
-
-.slider a {
-    flex: 1 0 100%;
-    scroll-snap-align: start;
-    scroll-snap-type: none;
-    object-fit: cover;
-}
-
-.slider1-nav{
-    display: flex;
-    column-gap: 0.5rem;
-    position: absolute;
-    bottom: 3.8rem;
-    left: 50%;
-    transform: translateX(-150%);
-    z-index: 1;
-}
-
-.slider1-nav a{
-    width: 0.6rem;
-    height: 0.6rem;
-    border-radius: 50%;
-    background-color: #d5d3d3;
-    opacity: 0.75;
-    transition: opacity ease 2s;
-}
-
-.slider1-nav a:hover{
-    opacity: 1;
-    background-color: #FFF;
-    cursor: pointer;
-}
-.container-slider{
-    display: flex;
-    position: relative;
+    justify-content: right;
     width: 100%;
-    max-width: 500px;
+    max-width: 1290px;
     margin: auto;
 }
-.slider-wrapper{
-    margin-top: 40px;
-    margin-bottom: 40px;
-    animation: scroll 40% linear infinite;
-}
-
-@keyframes scroll {
-    0% {
-        transform: translateX(0);
-    }
-    100% {
-        transform: translateX(calc(-250px * 4));
-    }
-}
-
-.slider img{
+.about-quote p{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-right: 60px;
     width: 100%;
-    max-width: 2900px;
-    object-fit: cover;
-    /*height: 800px;*/
+    max-width: 278px;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: right;
+    align-items: stretch;
 }
-#arrowSlider1{
-    position: absolute;
-    height: 50px;
-    width: 50px;
-    text-align: center;
-    font-size: 40px;
-    font-weight: 300;
-    font-family: Arial, Helvetica, sans-serif;
-    color: white;
-    border-radius: 50%;
-    cursor: pointer;
-    top: 40%;
-    cursor: pointer;
-}
-#arrowSlider1:first-child{
-    left: 5%;
-}
-#arrowSlider1:last-child{
-    right: 15%;
-}
-@media screen and (max-width: 720px){
-    .container-slider{
-        display: flex;
-        position: relative;
-        width: 100%;
-        max-width: 300px;
-        margin: auto;
-    }
-    .slider1-nav a{
-        width: 0.4rem;
-        height: 0.4rem;
-        border-radius: 50%;
-        background-color: #d5d3d3;
-        opacity: 0.75;
-        transition: opacity ease 2s;
-    }
-}
-@media screen and (max-width: 570px){
-    .container-slider{
-        display: flex;
-        position: relative;
-        width: 100%;
-        max-width: 350px;
-        margin: auto;
-    }
-    #arrowSlider1:first-child{
-        left: 0;
-    }
-    #arrowSlider1:last-child{
-        right: 0;
-    }
+.frame1 img{
+    display: flex;
+    width: 100%;
+    max-width: 1900px;
+    margin: auto;
 }
 .frame3 img{
     display: flex;
     width: 100%;
-    max-width: 1550px;
+    max-width: 2550px;
     margin: auto;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 48px;
+    padding-right: 48px;
     margin-bottom: 40px;
 }
+.frame8 {
+    display: flex;
+    width: 100%;
+    max-width: 2550px;
+    margin: auto;
+    padding-left: 48px;
+    padding-right: 48px;
+    margin-bottom: 40px;
+}
+.frame8 img{
+    width: 100%;
+    max-width: 902px;
+    margin: auto 0;
+}
+.frame8 p{
+    color: #FFF;
+    width: 100%;
+    max-width: 342px;
+    margin: auto;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.about-quote2{
+    color: white;
+    display: flex;
+    justify-content: right;
+    width: 100%;
+    max-width: 1190px;
+    margin: auto;
+}
+.about-quote2 p{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-right: 60px;
+    width: 100%;
+    max-width: 318px;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: right;
+    align-items: stretch;
+}
+.frame6 img{
+    display: flex;
+    width: 100%;
+    max-width: 1900px;
+    margin: auto;
+    padding-bottom: 40px;
+}
+.frame6 img:last-child{
+    padding-bottom: 0;
+}
 @media screen and (max-width: 720px) {
+    .frame4 img{
+        display: flex;
+        max-width: 100%;
+        width: 200px;
+        height: 100%;
+        object-fit: cover;
+        object-position: bottom;
+        margin: auto;
+        object-position: center;
+    }  
     .frame3 img{
         padding-left: 10px;
         padding-right: 10px;
         margin-bottom: 40px;
     }
+    .frame8 img{
+        max-width: 502px;
+    }
+    .frame8 p{
+        max-width: 242px;
+        font-size: 14px;
+    }  
 }
 .outros{
     align-items: center;
