--- a/ministeriopp.css
+++ b/ministeriopp.css
@@ -4,13 +4,22 @@
     box-sizing: border-box;
 }
 @font-face {
-    font-family: 'Neue Haas Grotesk Display Pro';
-    src: url('NHAASGROTESKTXPRO-55RG.ttf') format('truetype');
-}
+    font-family: 'Neue';
+    src: 
+    local('Neue');
+    src: url('NEUEHAASDISPLAYBLACK.TTF') format('truetype');
+    src: url('NHAASGROTESKTXPRO65MD.eot?#iefix') format('embedded-opentype'); 
+    src:url('NHAASGROTESKTXPRO65MD.eot'),
+         url('NHAASGROTESKTXPRO65MD.woff') format('woff'),
+         url('NHAASGROTESKTXPRO65MD.woff2') format('woff2'),
+         url('NHAASGROTESKTXPRO65MD.svg#NeueHaasGroteskDisplayPro') format('svg');
+    font-weight: normal;
+    font-style: normal;
+  }
 
-body{
-    background: #FFF;
+main{
     font-family: Arial, Helvetica, sans-serif;
+    background: #384538;
 }
 
 #home{
@@ -29,8 +38,8 @@ body{
 }
 
 .menu-logo img{
-    width: 100%;
-    height: 43px;
+    width: 166px;
+    height: 63px;
 }
 
 .navbar{
@@ -62,7 +71,7 @@ body{
 .btn-toggle {
     position: absolute;
     right: 3rem;
-    top: 2.5%;
+    top: 5%;
     display: none;
     flex-direction: column;
     justify-content: space-between;
@@ -86,6 +95,7 @@ body{
         flex-direction: column;
         align-items: center;
         width: 100%;
+        height: 100px;
     }
     .navbar{
         padding: 1px 48px;
@@ -103,26 +113,40 @@ body{
 }
 
 .sobre{
+    position: relative;
+    color: white;
     display: flex;
-    align-items: center;
     width: 100%;
     max-width: 1190px;
     margin: auto;
     padding: 0 20px;
-    margin-top: 10px;
-    margin-bottom: 20px;
+    font-family: 'Neue Haas Grotesk Display Pro';
 }
 .title{
+    margin:50px 0 50px 0;
     display: flex;
-    text-align: left;
-    align-items: end;
+    flex-direction: column;
+    text-align: start;
+    align-items: start;
     justify-content: start;
     width: 100%;
-    max-width: 1190px;
+    max-width: 810px;
+}
+.title p{
     font-size: 130px;
     font-weight: 400;
     font-style: normal;
     line-height: 0.8;
+}
+.title span{
+    margin-top: 50px;
+    font-size: 48px;
+font-style: normal;
+font-weight: 500;
+line-height: 120%;
+}
+.about{
+    margin:100px 0 50px 0;
 }
 .about h2{
     display: flex;
@@ -133,9 +157,9 @@ body{
     font-weight: 700;
     font-style: bold;
     padding: 8px 16px;
-    border: solid 1px black;
+    border: solid 1px white;
     border-radius: 20px;
-    width: 95px;
+    width: 105px;
 }
 .about h3{
     display: flex;
@@ -146,49 +170,65 @@ body{
     font-size: 14px;
     font-weight: 700;
     font-style: bold;
+    font-family: 'Neue Haas Grotesk Display Pro';
     margin-top: 18px;
 }
 .about p{
-    display: flex;
     justify-content: start;
     align-items: stretch;
     font-weight: 400;
     font-size: 14px;
     font-style: normal;
     line-height: 1.6;
+}
+.about p span{
+    font-weight: 800;
+    font-size: 14px;
+    font-style: bold;
+    line-height: 1.6;
     margin-top: 18px;
 }
-.about a{
-    display: flex;
-    text-decoration: none;
-    font-weight: 400;
-    font-size: 14px;
-    font-style: normal;
-    line-height: 1.6;
-}
-@media screen and (max-width: 720px) {
+@media screen and (max-width: 820px) {
     .sobre{
         display: block;
-        width: 100%;
-        max-width: 1190px;
-        margin: auto;
-        padding: 0 20px;
-        margin-top: 10px;
-        margin-bottom: 20px;
+        margin-bottom: 100px;
     }
     .title{
-        display: flex;
-        text-align: left;
-        align-items: end;
-        justify-content: start;
-        width: 100%;
-        max-width: 1190px;
-        font-size: 130px;
-        font-weight: 400;
-        font-style: normal;
-        line-height: 0.8;
-        margin-bottom: 20px;
+        padding: 40px 20px 0px 0px;}
+    .title p{
+        font-size: 120px;
     }
+}
+@media screen and (max-width: 520px) {
+    .title p{
+        font-size: 70px;
+    }
+}
+.about-quote{
+    color: white;
+    display: flex;
+    justify-content: right;
+    width: 100%;
+    max-width: 1190px;
+    margin: auto;
+}
+.about-quote p{
+    width: 100%;
+    max-width: 278px;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: right;
+    align-items: stretch;
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-right: 60px;
+}
+.frame1 img{
+    display: flex;
+    width: 100%;
+    max-width: 1900px;
+    margin: auto;
 }
 .slider{
     display: flex;
@@ -223,9 +263,9 @@ body{
     display: flex;
     column-gap: 0.5rem;
     position: absolute;
-    bottom: 3.8rem;
+    bottom: 3rem;
     left: 50%;
-    transform: translateX(-150%);
+    transform: translateX(-50%);
     z-index: 1;
 }
 
@@ -233,7 +273,7 @@ body{
     width: 0.6rem;
     height: 0.6rem;
     border-radius: 50%;
-    background-color: #d5d3d3;
+    background-color: #c0bfbf;
     opacity: 0.75;
     transition: opacity ease 2s;
 }
@@ -247,7 +287,7 @@ body{
     display: flex;
     position: relative;
     width: 100%;
-    max-width: 500px;
+    max-width: 600px;
     margin: auto;
 }
 .slider-wrapper{
@@ -276,20 +316,20 @@ body{
     height: 50px;
     width: 50px;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     font-weight: 300;
     font-family: Arial, Helvetica, sans-serif;
     color: white;
     border-radius: 50%;
     cursor: pointer;
-    top: 40%;
+    top: 45%;
     cursor: pointer;
 }
 #arrowSlider1:first-child{
-    left: 5%;
+    left: -10%;
 }
 #arrowSlider1:last-child{
-    right: 15%;
+    right: -10%;
 }
 @media screen and (max-width: 720px){
     .container-slider{
@@ -326,18 +366,90 @@ body{
 .frame3 img{
     display: flex;
     width: 100%;
-    max-width: 1550px;
+    max-width: 2550px;
     margin: auto;
-    padding-left: 100px;
-    padding-right: 100px;
+    padding-left: 48px;
+    padding-right: 48px;
     margin-bottom: 40px;
 }
+.frame8 {
+    display: flex;
+    width: 100%;
+    max-width: 2550px;
+    margin: auto;
+    padding-left: 48px;
+    padding-right: 48px;
+    margin-bottom: 40px;
+}
+.frame8 img{
+    width: 100%;
+    max-width: 902px;
+    margin: auto 0;
+}
+.frame8 p{
+    color: #FFF;
+    width: 100%;
+    max-width: 342px;
+    margin: auto;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-size: 16px;
+    font-style: normal;
+    font-weight: 500;
+    line-height: normal;
+}
+.about-quote2{
+    color: white;
+    display: flex;
+    justify-content: right;
+    width: 100%;
+    max-width: 1190px;
+    margin: auto;
+}
+.about-quote2 p{
+    margin-top: 60px;
+    margin-bottom: 60px;
+    margin-right: 60px;
+    width: 100%;
+    max-width: 318px;
+    font-family: 'Neue Haas Grotesk Display Pro';
+    font-size: 16px;
+    font-weight: 500;
+    justify-content: right;
+    align-items: stretch;
+}
+.frame6 img{
+    display: flex;
+    width: 100%;
+    max-width: 1900px;
+    margin: auto;
+    padding-bottom: 40px;
+}
+.frame6 img:last-child{
+    padding-bottom: 0;
+}
 @media screen and (max-width: 720px) {
+    .frame4 img{
+        display: flex;
+        max-width: 100%;
+        width: 200px;
+        height: 100%;
+        object-fit: cover;
+        object-position: bottom;
+        margin: auto;
+        object-position: center;
+    }  
     .frame3 img{
         padding-left: 10px;
         padding-right: 10px;
         margin-bottom: 40px;
     }
+    .frame8 img{
+        max-width: 502px;
+    }
+    .frame8 p{
+        max-width: 242px;
+        font-size: 14px;
+    }  
 }
 .outros{
     align-items: center;
