--- a/pousadasabina.css
+++ b/pousadasabina.css
@@ -104,7 +104,7 @@ body{
     width: 100%;
     max-width: 1190px;
     margin: auto;
-    padding: 0 20px;
+    padding: 70px 30px 100px 0;
     margin-top: 10px;
     margin-bottom: 20px;
 }
@@ -119,11 +119,12 @@ body{
     font-weight: 400;
     line-height: 0.8;
 }
-.about h2{
+.about{
+    font-family: 'Neue';
     display: flex;
-    text-align: left;
-    align-items: start;
-    justify-content: start;
+    flex-direction: column;
+}
+.about h2{
     font-size: 12px;
     font-weight: 700;
     font-style: bold;
@@ -133,37 +134,24 @@ body{
     width: 105px;
 }
 .about h3{
-    display: flex;
-    text-align: left;
-    align-items: start;
-    justify-content: start;
     font-weight: 700;
-    font-size: 14px;
+    font-size: 16px;
     font-weight: 700;
-    font-style: bold;
-    margin-top: 18px;
+    line-height: 100%;
+    margin-top: 25px;
 }
 .about h5{
     font-weight: 400;
     font-size: 14px;
-    line-height: 1;
-    margin-top: 18px;
+    margin-top: 3px;
 }
 .about p{
-    display: flex;
-    justify-content: start;
-    align-items: stretch;
-    font-weight: 400;
     font-size: 14px;
-    line-height: 1.6;
-    margin-top: 18px;
-}
-.about a{
-    display: flex;
-    text-decoration: none;
-    font-weight: 400;
-    font-size: 14px;
-    line-height: 1.6;
+    font-style: normal;
+    font-weight: 500;
+    line-height: 130%; 
+    margin-top: 25px;
+    width: 180px;
 }
 @media screen and (max-width: 720px) {
     .sobre{
@@ -191,18 +179,16 @@ body{
 .frame1 img{
     display: flex;
     width: 100%;
-    max-width: 1900px;
+    max-width: 100vw;
     margin: auto;
 }
 .slider::-webkit-scrollbar{
     display: none;
 }
-
 .slider.dragging .slider-img{
     cursor: grab;
     user-select: none;
 }
-
 .slider.no-transition{
     scroll-behavior: auto;
 }
@@ -273,7 +259,7 @@ body{
     display: flex;
     position: relative;
     width: 100%;
-    max-width: 500px;
+    max-width: 1000px;
     margin: auto;
 }
 .slider-wrapper{
@@ -357,60 +343,29 @@ body{
     margin: auto;
     margin-bottom: 40px;
 }
-.frame3 img, .frame5 img{
+.frame3{
+    background: #59A1D3;
+    padding: 5vw 30vw;
+}
+.frame3 img{
     display: flex;
     width: 100%;
     max-width: 1550px;
     margin: auto;
-    padding-left: 100px;
-    padding-right: 100px;
-    margin-bottom: 40px;
 }
 .frame4 {
     display: flex;
-    justify-content: space-around;
     width: 100%;
-    max-width: 1200px;
-    margin: auto;
+    max-width: 100vw;
 }
 .frame4 img{
     display: flex;
-    max-width: 100%;
-    width: 500px;
+    width: 100%;
+    max-width: 50vw;
     height: 100%;
     object-fit: cover;
-    object-position: bottom;
-    margin: auto;
-    object-position: center;
 }
 @media screen and (max-width: 720px) {
-    .frame4 img{
-        display: flex;
-        max-width: 100%;
-        width: 200px;
-        height: 100%;
-        object-fit: cover;
-        object-position: bottom;
-        margin: auto;
-        object-position: center;
-    }    
-}
-.frame5 img{
-    display: flex;
-    width: 100%;
-    max-width: 1550px;
-    margin: auto;
-    padding-left: 100px;
-    padding-right: 100px;
-    margin-bottom: 40px;
-    margin-top: 40px;
-}
-.frame6 img{
-    display: flex;
-    width: 100%;
-    max-width: 1900px;
-    margin: auto;
-    margin-bottom: 40px;
 }
 .outros{
     align-items: center;
