--- a/pousadasabinaeaqua.css
+++ b/pousadasabinaeaqua.css
@@ -104,9 +104,8 @@ body{
     width: 100%;
     max-width: 1190px;
     margin: auto;
-    padding: 70px 30px 100px 0;
+    padding: 70px 30px 80px 0;
     margin-top: 10px;
-    margin-bottom: 20px;
 }
 .title{
     display: flex;
@@ -123,6 +122,8 @@ body{
     font-family: 'Neue';
     display: flex;
     flex-direction: column;
+    border-bottom: 1px solid #000;
+    padding-bottom: 40px;
 }
 .about h2{
     font-size: 12px;
@@ -352,11 +353,29 @@ body{
     width: 100%;
     max-width: 1550px;
     margin: auto;
+    object-fit: cover;
+}
+.frame3aqua img{
+    max-width: 680px;
 }
 .frame4 {
     display: flex;
     width: 100%;
     max-width: 100vw;
+}
+.frame5{
+    display: flex;
+    flex-direction: column;
+    align-items: end;
+    gap: 13px;
+    width: 100%;
+    max-width: 1100px;
+    margin: auto;
+    padding: 50px 0;
+}
+.frame5 img{
+ max-width: 680px;
+ right: 0;
 }
 .frame4 img{
     display: flex;
